# grooweboxe

./: README.md
.clinerules/: communication-style.md
.github/workflows/: deploy-pages.yml
docs/: ARCHITECTURE.md  README.md
docs/api/: API_REFERENCE.md
docs/hardware/: SPECIFICATIONS.md
docs/protocols/: COMMUNICATION.md
docs/software/: ESP32_ARCHITECTURE.md
hardware/: SCHEMATIC_SPEC.md
hardware/pcb/: PCB_LAYOUT.md
hardware/schematics/: AUDIO_INTERFACE.sch  ESP32_MAIN.sch  INTERFACE_PERIPHERALS.sch  POWER_SUPPLY.sch
prototypes/: README.md
software/esp32/: CMakeLists.txt  README.md
software/esp32/components/audio/: component.mk
software/esp32/components/audio/include/: audio_engine.h
software/esp32/components/drivers/: component.mk
software/esp32/components/drivers/include/: i2s_driver.h
software/esp32/components/sequencer/: component.mk
software/esp32/components/sequencer/include/: sequencer.h
software/esp32/components/storage/: component.mk
software/esp32/components/storage/include/: file_manager.h
software/esp32/components/ui/: component.mk
software/esp32/components/ui/include/: display_manager.h
software/esp32/components/utils/: component.mk
software/esp32/components/utils/include/: debug.h
software/esp32/main/: main.c
software/web/: README.md  index.html  package-lock.json  package.json  vite.config.js
software/web/src/: App.vue  main.js
software/web/src/components/: AudioParams.vue  Browser.vue  ChannelParams.vue  ChannelsGrid.vue  Home.vue  KnobsMatrix.vue  MasterSection.vue  MenuEncoder.vue  SaveLoadModal.vue  (+4 more)
(+23 files in other folders)
